feat: integrate xpyun receipt printing
